<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tingtingapps.securesms.InAppBillingActivity">

    <TextView
        android:id="@+id/donation_thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingTop="10dp"
        android:text="@string/donation_thank_you"
        android:textColor="@color/gray78"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/donation_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donation_thank_you"
        android:layout_gravity="left"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/donation_desc"
        android:textColor="@color/gray70"
        android:textSize="17dp" />

    <Button
        android:id="@+id/btn_1usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donation_desc"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:background="#71C671"
        android:text="@string/donation_1usd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_2usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_1usd"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:background="#388E8E"
        android:text="@string/donation_2usd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_5usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_remove_ads"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:background="@color/textsecure_primary"
        android:text="@string/donation_5usd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_10usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_5usd"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:background="#3333FF"
        android:text="@string/donation_10usd"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="buyClick"
        android:text="Buy"
        android:visibility="gone" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:onClick="buttonClicked"
        android:text="Click"
        android:visibility="gone" />

    </LinearLayout>
